--- a/drawing/pom.xml
+++ b/drawing/pom.xml
@@ -3,8 +3,8 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.flbsdtv.games</groupId>
-    <artifactId>PartyGames</artifactId>
+    <groupId>org.flbsdtv.partygames</groupId>
+    <artifactId>Drawing</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <properties>
         <compiler-plugin.version>3.8.1</compiler-plugin.version>
